# fit-tracking

./: Bsums.h  CMakeLists.txt  ConnectedComponents.cpp  ConnectedComponents.h  README.md  Track.h  codebook.cpp  codebook.h  includes.h  main.cpp  main_east_west.cpp  main_lift.cpp  main_north.cpp  main_stair.cpp
